# internal/handler/pdf.go
@@ -5,7 +5,7 @@ import (
 	"net/http"
 
 	"github.com/labstack/echo/v4"
-	"github.com/one-eyed-willy/pkg/utils"
+	"github.com/one-eyed-willy/internal/errors"
 )
 
 // CreatePdfFromHtml godoc
@@ -17,25 +17,26 @@ import (
 //	@produce      application/octet-stream
 //	@Param        html	body	createPdfFromHTMLRequest	true	"Base64 encoded string of a html"
 //	@success      200
-//	@failure      400	{object}	utils.Error
-//	@failure      500	{object}	utils.Error
+//	@failure      400	{object}	errors.ValidationError
+//	@Failure      413
+//	@failure      500	{object}	errors.Error
 //	@Router       /pdf/generate [post]
 func (h *Handler) GeneratePdfFromHTML(c echo.Context) (err error) {
 	req := new(createPdfFromHTMLRequest)
 
 	if err := bindRequest(c, req); err != nil {
-		return c.JSON(http.StatusBadRequest, utils.NewValidatorError(err))
+		return c.JSON(http.StatusBadRequest, errors.NewValidatorError(err))
 	}
 
 	decoded, err := base64.StdEncoding.DecodeString(req.HTML)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
+		return c.JSON(http.StatusInternalServerError, errors.NewError(err, errors.CodeUndecodableBase64Err))
 	}
 
 	pdf, err := h.PdfRender.GenerateFromHTML(string(decoded))
 
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
+		return c.JSON(http.StatusInternalServerError, errors.NewError(err, errors.CodePdfGenerationErr))
 	}
 
 	return c.Stream(http.StatusOK, MIMEApplicationPdf, pdf)
@@ -50,25 +51,26 @@ func (h *Handler) GeneratePdfFromHTML(c echo.Context) (err error) {
 //	@Produce      application/octet-stream
 //	@param        files	formData	file	true	"pdf files to merge"
 //	@Success      200
-//	@Failure      400	{object}	utils.Error
-//	@Failure      500	{object}	utils.Error
+//	@Failure      400	{object}	errors.ValidationError
+//	@Failure      413
+//	@Failure      500	{object}	errors.Error
 //	@Router       /pdf/merge [post]
 func (h *Handler) MergePdfs(c echo.Context) (err error) {
 	req := new(mergePdfsRequest)
 
 	if err := bindRequest(c, req); err != nil {
-		return c.JSON(http.StatusBadRequest, utils.NewValidatorError(err))
+		return c.JSON(http.StatusBadRequest, errors.NewValidatorError(err))
 	}
 
 	files, err := readFiles(req.Files)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
+		return c.JSON(http.StatusInternalServerError, errors.NewError(err, errors.CodeUnreadlableFileErr))
 	}
 
 	pdf, err := h.PdfTool.Merge(files)
 
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
+		return c.JSON(http.StatusInternalServerError, errors.NewError(err, errors.CodePdfMergeErr))
 	}
 
 	return c.Stream(http.StatusOK, MIMEApplicationPdf, pdf)
@@ -76,32 +78,33 @@ func (h *Handler) MergePdfs(c echo.Context) (err error) {
 
 // EncryptPdfFiles godoc
 //
-//	@Summary      Encrypt pdf
-//	@Description  Encrypts a pdf file
-//	@Tags         PDF Tools
-//	@Accept       multipart/form-data
-//	@Produce      application/octet-stream
-//	@param        file		formData	file	true	"pdf file to encrypt"
-//	@param        password	formData	string	true	"file password"
-//	@Success      200
-//	@Failure      400	{object}	utils.Error
-//	@Failure      500	{object}	utils.Error
-//	@Router       /pdf/encrypt [post]
+//		@Summary      Encrypt pdf
+//		@Description  Encrypts a pdf file
+//		@Tags         PDF Tools
+//		@Accept       multipart/form-data
+//		@Produce      application/octet-stream
+//		@param        file		formData	file	true	"pdf file to encrypt"
+//		@param        password	formData	string	true	"file password"
+//		@Success      200
+//		@Failure      400	{object}	errors.ValidationError
+//	  @Failure      413
+//		@Failure      500	{object}	errors.Error
+//		@Router       /pdf/encrypt [post]
 func (h *Handler) EncryptPdf(c echo.Context) error {
 	req := new(encryptPdfRequest)
 
 	if err := bindRequest(c, req); err != nil {
-		return c.JSON(http.StatusBadRequest, utils.NewValidatorError(err))
+		return c.JSON(http.StatusBadRequest, errors.NewValidatorError(err))
 	}
 	file, err := readFile(req.File)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
+		return c.JSON(http.StatusInternalServerError, errors.NewError(err, errors.CodeUnreadlableFileErr))
 	}
 
 	pdf, err := h.PdfTool.Encrypt(file, req.Password)
 
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
+		return c.JSON(http.StatusInternalServerError, errors.NewError(err, errors.CodePdfEncryptionErr))
 	}
 
 	return c.Stream(http.StatusOK, MIMEApplicationPdf, pdf)
